fixes text overflowing calculator screen - close #1

--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ img {
     font-size: 12px;
 }
 .display {
-    display: flex;
     align-items: center;
     justify-content: flex-end;
     height: 80px;
@@ -57,6 +56,9 @@ img {
     padding: 5px;
     background-color: lightgreen;
     border-radius: 3px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .buttons{
